--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -59,7 +59,7 @@
               <button class="btn" ng-show="!isOnline(network)"
               ng-click="login(network)">Sign in to {{ prettyNetworkName(network) }}</button>
               <button class="btn" ng-show="isOnline(network)"
-                ng-click="core.logout(network)">Sign out from {{ prettyNetworkName(network) }}</button>
+                ng-click="logout(network)">Sign out from {{ prettyNetworkName(network) }}</button>
             </span>
           </div>
         </div>
