Fix UI bugs before dogfood

--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -99,6 +99,8 @@
                     ng-blur="showFilterTip=false"
                     ng-class="{on:ui.filters.friendsAccess}"
                     ng-click="ui.toggleFilter('friendsAccess')"></button>
+            <!-- TODO: re-enable when we can show 1000+ non-uProxy contacts
+                 without slowing down (https://github.com/uProxy/uProxy/issues/201)
             <button id="uproxy-filter" class="filter"
                     ng-mouseenter="showFilter('uproxy')"
                     ng-focus="showFilter('uproxy')"
@@ -107,6 +109,7 @@
                     ng-mouseleave="showFilterTip=false"
                     ng-class="{on:ui.filters.uproxy}"
                     ng-click="ui.toggleFilter('uproxy')"></button>
+            -->
             <!-- TODO: re-enable when online filter works
             <button id="online-filter" class="filter"
                     ng-mouseenter="showFilter('online')"
@@ -147,9 +150,9 @@
 
         <div id="roster-frame" ng-show="ui.isRoster()">
           <ul class="contacts">
-            <li ng-repeat="contact in model.roster | orderBy : ['-canUProxy', 'name']"
+            <!-- TODO: re-add sort by canUProxy once we are able to show all contacts -->
+            <li ng-repeat="contact in model.roster | filter:ui.doesContactPassFilter() | orderBy : 'name' track by $index"
                 ng-click="ui.focusOnUser(contact)"
-                ng-hide="ui.contactIsFiltered(contact)"
                 ng-class="{offline:!contact.online}"
                 >
               {{contact.name}}
@@ -171,6 +174,9 @@
               <span class="c-notification" ng-show='contact.hasNotification'> ! </span>
             </li>
           </ul>
+          <div class="no-contacts-found" ng-hide="ui.hasOnlineUProxyBuddies()">
+            No online contacts found with uProxy
+          </div>
         </div>
 
         <div class="contact-info" id="their-info"
