Add warning to login screen of uProxy

--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -64,7 +64,13 @@
           </div>
         </div>
       </div>
-    </div>
+      <div id="uproxy-warning">
+          <strong>WARNING</strong>: Some of uProxy’s critical security and privacy features are
+          still under development. If <strong>having your internet usage become public
+          knowledge</strong> might put you at risk in any way, please <strong>do not use
+          uProxy</strong> at this time.
+      </div>
+    </div>  <!-- end of #login-splash -->
 
     <button id="options-btn" ng-click="toggleOptions()"
         ng-show="ui.loggedIn()"
