--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -56,12 +56,16 @@
 
           <div class="network-btn">
             <span ng-repeat="(network, detail) in model.networks">
-              <button class="btn" ng-show="!isOnline(network)"
-              ng-click="login(network)">Sign in to {{ prettyNetworkName(network) }}</button>
-              <button class="btn" ng-show="isOnline(network)"
-                ng-click="logout(network)">Sign out from {{ prettyNetworkName(network) }}</button>
+              <span ng-if="network != Social.MANUAL_NETWORK_ID">
+                <button class="btn" ng-show="!isOnline(network)"
+                    ng-click="login(network)">Sign in to {{ prettyNetworkName(network) }}</button>
+                <button class="btn" ng-show="isOnline(network)"
+                    ng-click="logout(network)">Sign out from {{ prettyNetworkName(network) }}</button>
+              </span>
             </span>
           </div>
+
+          <!-- TODO: Add a way to open UI for managing manual contacts. -->
         </div>
       </div>
       <div id="uproxy-warning">
