--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -55,8 +55,7 @@
 
           <div class="network-btn">
             <span ng-repeat="(network, detail) in model.networks">
-              <!-- TODO: Compare against Social.MANUAL_NETWORK_ID instead. -->
-              <span ng-if="network !== 'manual'">
+              <span ng-if="network !== uProxy.MANUAL_NETWORK_ID">
                 <button class="btn" ng-show="!isOnline(network)"
                     ng-click="login(network)">Sign in to {{ prettyNetworkName(network) }}</button>
                 <button class="btn" ng-show="isOnline(network)"
