Cleanup: Changed "Uproxy" to "uProxy".

--- a/src/generic_ui/options.html
+++ b/src/generic_ui/options.html
@@ -20,7 +20,7 @@
     <h3>{{'options'|i18n}}</h3>
 
     <div class="app-missing-warning" ng-hide="core.status.connected">
-      You need to install the UProxy app as well as the UProxy extension.
+      You need to install the uProxy app as well as the uProxy extension.
     </div>
 
     <div id="options-left">
@@ -149,7 +149,7 @@
       <!-- TODO: make a proper controller for state reseting -->
       <button class="btn btn-warning btn-mini" ng-disabled="resetClicked"
         ng-click="resetClicked=true">
-        ⚠ Reset UProxy
+        ⚠ Reset uProxy
       </button>
 
       <div ng-show="resetClicked" style="margin: 10px">
