--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -34,7 +34,7 @@
       <span class="description">Safe Passage for the Web.</span>
 
       <div class="app-missing-warning" ng-hide="core.status.connected">
-        You need to install the UProxy app as well as the UProxy extension.
+        You need to install the uProxy app as well as the uProxy extension.
       </div>
 
       <div ng-show="core.status.connected">
@@ -47,7 +47,7 @@
         </input>
         <p class="tip" ng-show="descriptionHelp">
           Please describe your device.
-          This description will be visible to friends with UProxy.
+          This description will be visible to friends with uProxy.
         </p>
         -->
 
