--- a/src/chrome/app/debug.html
+++ b/src/chrome/app/debug.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
   <head>
-    <title>UProxy</title>
+    <title>uProxy</title>
     <style>
       body {
         padding: 15px;
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-    <h1>UProxy launch Page</h1>
+    <h1>uProxy Launch Page</h1>
     <div>
       Used for testing/debugging. TODO: add a version of the UI here too; tell the user to install the extension if needed.
     </div>
