--- a/src/chrome/app/dialogs/manualidentity/manualdialog.html
+++ b/src/chrome/app/dialogs/manualidentity/manualdialog.html
@@ -9,13 +9,13 @@
   <body>
     <div class='container span7'>
       <h2>RECEIVE</h2>
-      <p>Copy and paste messages that you receive from other UProxy users here:</p>
+      <p>Copy and paste messages that you receive from other uProxy users here:</p>
       <form id='recv-form' class="form-inline">
         <input id='recv-input' type='text' class="input-large" placeholder="Paste here...">
         <button id='recv-submit' class="btn">Submit</button>
       </form>
       <h2>SEND</h2>
-      <p>Send these messages to the following UProxy users:</p>
+      <p>Send these messages to the following uProxy users:</p>
       <table class='table table-condensed table-bordered'>
         <thead>
           <tr class='success'>
