--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -55,7 +55,8 @@
 
           <div class="network-btn">
             <span ng-repeat="(network, detail) in model.networks">
-              <span ng-if="network !== MANUAL_NETWORK_ID">
+              <!-- TODO: Compare against Social.MANUAL_NETWORK_ID instead. -->
+              <span ng-if="network !== 'manual'">
                 <button class="btn" ng-show="!isOnline(network)"
                     ng-click="login(network)">Sign in to {{ prettyNetworkName(network) }}</button>
                 <button class="btn" ng-show="isOnline(network)"
