--- a/src/generic_ui/popup.html
+++ b/src/generic_ui/popup.html
@@ -205,7 +205,7 @@
             {{ ui.user.name }} does not have <b>uProxy</b>.
           </p>
 
-          <uproxy-user-access></uproxy-user-access>
+          <uproxy-contact></uproxy-contact>
 
         </div>  <!-- end of #access -->
 
