--- a/samples/freedomchat/chrome/main.html
+++ b/samples/freedomchat/chrome/main.html
@@ -21,7 +21,7 @@
   </div>
 
   <script src='webrtc-adapter/adapter.js'></script>
-  <script src='lib/freedom-for-uproxy.js' data-manifest='freedom.json'>
+  <script src='lib/freedom-for-chrome-for-uproxy.js' data-manifest='freedom.json'>
     {
       "debug": false
     }
