--- a/peerconnection/samples/chat2-webpage/main.html
+++ b/peerconnection/samples/chat2-webpage/main.html
@@ -1,11 +1,11 @@
 <html>
 <head>
   <title>Peer Connection Sample Code</title>
-  <script src='handler/queue.js'></script>
-  <script src='webrtc-adapter/adapter.js'></script>
-  <script src='angular/angular-1.3.0-beta15.min.js'></script>
-  <script src='peerconnection/datachannel.js'></script>
-  <script src='peerconnection/peerconnection.js'></script>
+  <script src='lib/handler/queue.js'></script>
+  <script src='lib/third_party/webrtc-adapter/adapter.js'></script>
+  <script src='lib/third_party/angular/angular-1.3.0-beta15.min.js'></script>
+  <script src='lib/peerconnection/datachannel.js'></script>
+  <script src='lib/peerconnection/peerconnection.js'></script>
   <style>
     div.info {
       font-family: monospace;
