--- a/src/chrome/app/uproxy.html
+++ b/src/chrome/app/uproxy.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>uProxy - APP</title>
+    <script type='text/javascript' src='scripts/uproxy.js'></script>
     <script type='text/javascript' src='scripts/manual_dialog.js'></script>
     <script type='text/javascript' src='scripts/auth_google.js'></script>
     <script type='text/javascript' src='scripts/auth_facebook.js'></script>
