toolbar and container styled in polymer

--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -7,10 +7,19 @@
   <script src="../lib/platform/platform.js"></script>
   <link rel="import" href="uproxy-toolbar.html">
   <style>
+    body {
+      padding: 0;
+      margin: auto;
+    }
+    #popup {
+      width: 371px;
+      height: 600px;
+      border: 1px solid #000;
+    }
   </style>
 </head>
 
-<body unresolved touch-action="auto">
+<body id="popup" unresolved touch-action="auto">
 
   <uproxy-toolbar>
   </uproxy-toolbar>
