--- a/src/generic_ui/polymer/uproxy-toolbar.html
+++ b/src/generic_ui/polymer/uproxy-toolbar.html
@@ -5,8 +5,8 @@
     <style>
     :host {
       display: block;
-      height: 30px;
-      background: black;
+      height: 60px;
+      background: #94a7cf;
     }
     </style>
     <content>
