--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <script src="../lib/platform/platform.js"></script>
   <link rel="import" href="uproxy-toolbar.html">
+  <link rel="import" href="uproxy-button.html">
   <style>
     body {
       padding: 0;
@@ -14,7 +15,7 @@
     #popup {
       width: 371px;
       height: 600px;
-      border: 1px solid #000;
+      border: 1px solid #888;
     }
   </style>
 </head>
@@ -22,8 +23,28 @@
 <body id="popup" unresolved touch-action="auto">
 
   <uproxy-toolbar>
+    <uproxy-button id='give' img='../icons/share_grey.svg'>
+    </uproxy-button>
+    <uproxy-button id='get' img='../icons/receive_grey.svg'>
+    </uproxy-button>
+    <uproxy-button id='settings' img='../icons/more_vert_grey.svg'>
+    </uproxy-button>
   </uproxy-toolbar>
 
+  <script>
+    var give = document.querySelector('#give');
+    var get = document.querySelector('#get');
+    var settings = document.querySelector('#settings');
+    give.addEventListener('clicked', function() {
+      console.log('GIVE mode.');
+    });
+    get.addEventListener('clicked', function() {
+      console.log('GET mode.');
+    });
+    settings.addEventListener('clicked', function() {
+      console.log('SETTINGS');
+    });
+  </script>
 </body>
 
 </html>
