moving logging to core freedom provider so core-providers can use it

--- a/coreproviders/samples/freedomchat-chromeapp/main.html
+++ b/coreproviders/samples/freedomchat-chromeapp/main.html
@@ -20,7 +20,8 @@
     <button id="sendButtonB">Send</button>
   </div>
 
-  <script src='lib/freedom/freedom-for-chrome-for-uproxy.js' data-manifest='freedom.json'>
+  <script src='lib/freedom/freedom-for-webpages-for-uproxy.js'
+          data-manifest='freedom-module.json'>
     {
       "debug": false
     }
