all typechecks and paths fixed

--- a/webrtc/samples/chat2-webpage/main.html
+++ b/webrtc/samples/chat2-webpage/main.html
@@ -1,11 +1,12 @@
 <html>
 <head>
   <title>Peer Connection Sample Code</title>
+  <script src='lib/logging/logging.js'></script>
   <script src='lib/handler/queue.js'></script>
   <script src='lib/third_party/angular/angular-1.3.0-beta15.min.js'></script>
-  <script src='lib/peerconnection/third_party/adapter.js'></script>
-  <script src='lib/peerconnection/datachannel.js'></script>
-  <script src='lib/peerconnection/peerconnection.js'></script>
+  <script src='lib/webrtc/third_party/adapter.js'></script>
+  <script src='lib/webrtc/datachannel.js'></script>
+  <script src='lib/webrtc/peerconnection.js'></script>
   <style>
     div.info {
       font-family: monospace;
