--- a/freedom/samples/freedomchat-chromeapp/main.html
+++ b/freedom/samples/freedomchat-chromeapp/main.html
@@ -1,6 +1,13 @@
 <html>
 <head>
   <title>PeerConnection chat client</title>
+  <!-- dependencies of freedom-for-*-for-uproxy -->
+  <script src='lib/webrtc/third_party/adapter.js' />
+  <script src='lib/handler/queue.js' />
+  <script src='lib/arraybuffers/arraybuffers.js' />
+  <script src='lib/logging/logging.js' />
+  <script src='lib/webrtc/peerconnection.js' />
+  <script src='lib/webrtc/datachannel.js' />
 </head>
 
 <body>
