--- a/webrtc/samples/chat-webpage/main.html
+++ b/webrtc/samples/chat-webpage/main.html
@@ -21,9 +21,10 @@
   </div>
 
   <script src='lib/handler/queue.js'></script>
-  <script src='lib/peerconnection/third_party/adapter.js'></script>
-  <script src='lib/peerconnection/datachannel.js'></script>
-  <script src='lib/peerconnection/peerconnection.js'></script>
+  <script src='lib/logging/logging.js'></script>
+  <script src='lib/webrtc/third_party/adapter.js'></script>
+  <script src='lib/webrtc/datachannel.js'></script>
+  <script src='lib/webrtc/peerconnection.js'></script>
   <script src='main.js'></script>
 </body>
 </html>
