--- a/freedom/samples/freedomchat-chromeapp/main.html
+++ b/freedom/samples/freedomchat-chromeapp/main.html
@@ -1,13 +1,6 @@
 <html>
 <head>
   <title>PeerConnection chat client</title>
-  <!-- dependencies of freedom-for-*-for-uproxy -->
-  <script src='lib/webrtc/third_party/adapter.js' />
-  <script src='lib/handler/queue.js' />
-  <script src='lib/arraybuffers/arraybuffers.js' />
-  <script src='lib/logging/logging.js' />
-  <script src='lib/webrtc/peerconnection.js' />
-  <script src='lib/webrtc/datachannel.js' />
 </head>
 
 <body>
@@ -30,7 +23,14 @@
   <script src='lib/freedom/freedom-for-webpages-for-uproxy.js'
           data-manifest='freedom-module.json'>
     {
-      "debug": false
+      // This is useful for debugging.
+      //
+      // "debug": true
+
+      // This makes modules run in iFrames instead of WebWorkers. You get
+      // syntax error warnings from iFrames where WebWorker's silently die.
+      //
+      // "portType": "Frame"
     }
   </script>
   <script src='main.js'></script>
