--- a/freedom/samples/freedomchat-chromeapp/main.html
+++ b/freedom/samples/freedomchat-chromeapp/main.html
@@ -1,6 +1,12 @@
 <html>
 <head>
   <title>PeerConnection chat client</title>
+  <!-- Dependencies for freedom-for-*-for-uproxy -->
+  <script src='lib/logging/logging.js'></script>
+  <script src='lib/handler/queue.js'></script>
+  <script src='lib/webrtc/third_party/adapter.js'></script>
+  <script src='lib/webrtc/datachannel.js'></script>
+  <script src='lib/webrtc/peerconnection.js'></script>
 </head>
 
 <body>
