rename polymer element html files

--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -12,6 +12,7 @@
       border: 1px solid #ccc; border-left: none; border-right: none;
       background-color: #fff;
       padding: 16px;
+      margin: -5px 0;
       cursor: default;
       overflow: hidden;
       -webkit-transition: all 0.23s !important;
