--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -5,8 +5,8 @@
   <title>uProxy polymer UI</title>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <script src="../lib/platform/platform.js"></script>
-  <link rel="import" href="uproxy-toolbar.html">
-  <link rel="import" href="uproxy-button.html">
+  <link rel="import" href="toolbar.html">
+  <link rel="import" href="button.html">
   <link rel="import" href="roster.html">
   <style>
     body {
