begin settings page, factor out ui into a giant polymer-element, make view toggling work

--- a/src/generic_ui/polymer/button.html
+++ b/src/generic_ui/polymer/button.html
@@ -15,9 +15,13 @@
       height: 28px;
       width: 28px;
       vertical-align: middle;
+      opacity: 0.6;
+      -webkit-transition: all 0.23s !important;
+      -moz-transition: all 0.23s !important;
+      transition: all 0.23s !important;
     }
     img:hover {
-      opacity: 0.7;
+      opacity: 1.0;
       cursor: pointer;
     }
     </style>
