--- a/src/generic_ui/polymer/contact.html
+++ b/src/generic_ui/polymer/contact.html
@@ -5,23 +5,24 @@
   <template>
     <style>
     :host {
+      position: relative;
       display: inline-block;
       box-sizing: border-box;
-      height: 64px;
+      height: 72px;
       width: 100%;
-      border: 1px solid #ccc; border-left: none; border-right: none;
+      border: 1px solid #ddd; border-left: none; border-right: none;
       background-color: #fff;
       padding: 16px;
-      margin: -5px 0;
+      margin: 0;
       cursor: default;
       overflow: hidden;
-      -webkit-transition: all 0.23s !important;
-      -moz-transition: all 0.23s !important;
-      transition: all 0.23s !important;
+      -webkit-transition: all 0.46s !important;
+      -moz-transition: all 0.46s !important;
+      transition: all 0.46s !important;
+      z-index: 10;
     }
     :host(:hover) {
       box-shadow: 0px 2px 5px #ccc;
-      margin-top: -2px;
       z-index: 100;
     }
     #avatar {
@@ -30,19 +31,30 @@
       border: none;
       border-radius: 50%;
       background-color: #eee;
-      vertical-align: middle;
+      vertical-align: top;
+    }
+    #words {
+      display: inline-block;
+      padding: 0 16px;
+      height: 100%;
     }
     h1 {
       display: inline;
       font-size: 16px;
       font-weight: 100;
-      padding: 0 16px;
+    }
+    #description {
+      color: #aaa;
+      display: block;
+      font-size: 10px;
     }
     </style>
 
     <img id='avatar' src='{{ contact.pic }}' />
-    <h1>{{ contact.name }}</h1>
-    <span{{ contact.description }}></span>
+    <div id='words'>
+      <h1>{{ contact.name }}</h1>
+      <span id='description'>{{ contact.description }}</span>
+    </div>
   </template>
 
   <script>
