--- a/freedom/samples/freedomchat-chromeapp/main.html
+++ b/freedom/samples/freedomchat-chromeapp/main.html
@@ -3,6 +3,7 @@
   <title>PeerConnection chat client</title>
   <!-- Dependencies for freedom-for-*-for-uproxy -->
   <script src='lib/handler/queue.js'></script>
+  <script src='lib/logging/logging.js'></script>
   <script src='lib/webrtc/third_party/adapter.js'></script>
   <script src='lib/webrtc/datachannel.js'></script>
   <script src='lib/webrtc/peerconnection.js'></script>
