split ui script into separate file, make external binding work

--- a/src/generic_ui/polymer/popup.html
+++ b/src/generic_ui/polymer/popup.html
@@ -11,11 +11,20 @@
     text-align: center;
   }
   </style>
+  <script>
+    // TODO: bind this to the underlying uproxy ui model.
+    var model = {};
+  </script>
 </head>
 
 <body unresolved touch-action='auto'>
   <uproxy-ui>
   </uproxy-ui>
+  <script>
+    var ui = document.querySelector('uproxy-ui');
+    console.log('global model is: ', model);
+    ui.model = model;
+  </script>
 </body>
 
 </html>
