--- a/src/generic_ui/polymer/toolbar.html
+++ b/src/generic_ui/polymer/toolbar.html
@@ -4,9 +4,11 @@
   <template>
     <style>
     :host {
+      position: absolute;
       display: block;
-      height: 50px;
+      height: 50px; width: 100%;
       background: #94a7cf;
+      z-index: 1000;
     }
     </style>
     <content>
