try internet metaphor background picture

--- a/src/generic_ui/polymer/button.html
+++ b/src/generic_ui/polymer/button.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../lib/polymer/polymer.html">
+<link rel='import' href='../lib/polymer/polymer.html'>
 
-<polymer-element name="uproxy-button" attributes="img, click">
+<polymer-element name='uproxy-button' attributes='img, click'>
   <template>
     <style>
     :host {
