--- a/src/generic_ui/polymer/networks.html
+++ b/src/generic_ui/polymer/networks.html
@@ -11,6 +11,7 @@
       box-sizing: border-box;
       height: 100%; width: 100%;
       padding-top: 50px;
+      background-color: #fff;
       -webkit-transition: all 0.23s !important;
       -moz-transition: all 0.23s !important;
       transition: all 0.23s !important;
