--- a/src/generic_ui/polymer/ui.html
+++ b/src/generic_ui/polymer/ui.html
@@ -17,6 +17,7 @@
         margin: auto;
         text-align: left;
         overflow: hidden;
+        background: url('../icons/internet.png') center top no-repeat;
       }
     </style>
 
